# CelestialBallet

./: .gitignore  CMakeLists.txt  NOTICE  README.md  Vector3D.cpp  WorkDocument.md  bisection.cpp  camera.cpp  celestialBody.cpp  compile.bat  entity.cpp  gravity.cpp  largeMassStars.avi  library.h  main.cpp  moveit.cpp  noise.cpp  planet.avi  position.cpp  ray.cpp  redstar.avi  rk45.cpp  show.py  twostar.avi
project_website/app/: server.py
project_website/app/cpp/: simulation  simulation.cpp
project_website/app/static/: scripts.js  styles.css
project_website/app/templates/: index.html
